# airimpute-pro-desktop

./: .eslintrc.json  .gitattributes  .gitignore  .prettierrc.json  ACADEMIC_ROADMAP.md  ALGORITHM_DOCUMENTATION.md  ALGORITHM_IMPLEMENTATION_ANALYSIS.md  ARCHITECTURE.md  BENCHMARKING_GUIDE.md  BENCHMARK_IMPLEMENTATION_SUMMARY.md  BUILD_STATUS.md  COMPILATION_AND_OFFLINE_SUMMARY.md  COMPILATION_SUMMARY.md  COMPONENT_MAPPING.md  COMPREHENSIVE_IMPLEMENTATION_STATUS.md  CRITICAL_ACADEMIC_GAPS_ANALYSIS.md  DATA_STRUCTURES.md  DEEP_ANALYSIS_REPORT.md  DOCKER_BUILD_INSTRUCTIONS.md  DOCKER_BUILD_READY.md  DOCKER_NETWORK_TROUBLESHOOTING.md  DOCKER_SETUP_GUIDE.md  Dockerfile  Dockerfile.windows-build  Dockerfile.windows-build-v2  EXTREME_IMPROVEMENTS_COMPLETE.md  EXTREME_IMPROVEMENTS_SUMMARY.md  FEATURE_COMPARISON.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  GITHUB_ACTIONS_WINDOWS_BUILD_READY.md  IMPLEMENTATION_STATUS.md  INTEGRATION_TEST_STRATEGY.md  LIBSOUP-FIX-DOCUMENTATION.md  LIBSOUP_CONFLICT_SOLUTION.md  LIBSOUP_FIX_SUMMARY.md  LOCAL_OPTIMIZATIONS_SUMMARY.md  MAINTENANCE_AND_TESTING_PLAN.md  OFFLINE_APP_MANIFEST.md  OFFLINE_MANIFEST.md  PERFORMANCE.md  (+111 more)
.cargo/: config-windows.toml  config.toml  config.toml.bak
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
airimpute-pro-portable/: airimpute-pro.sh  run-dev.sh
bundled-libs/: libsoup-2.4.so.1.11.2
docs/: CODE_SIGNING_GUIDE.md  PRACTICAL_USER_GUIDE.md  TESTING_GUIDE.md  github-actions-windows-build.md
e2e/: complete-workflow.spec.ts
src/: App.tsx  (+4 more)
src-tauri/: Cargo-windows.toml  Cargo.toml  Cargo.toml.patch  build-portable.sh  build-windows.rs  build-with-webkit41.sh  build.rs  fix_python_linking.sh  generate-placeholder-icons.sh  javascriptcoregtk-4.0.pc  pyo3-config.sh  run-airimpute.sh  tauri.conf.json  tauri.conf.json.bak  test-security.sh  webkit-fix.sh  webkit2gtk-4.0.pc
src-tauri/.cargo/: config.toml
src-tauri/airimpute-pro-portable/: README.txt
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/python/: python.bat
src-tauri/python/libs/: python311.lib
src-tauri/src/: main.rs  mod.rs  state.rs
src-tauri/src/commands/: analysis.rs  benchmark.rs  benchmark_stub.rs  data.rs  debug.rs  export.rs  help.rs  imputation.rs  imputation_v2.rs  imputation_v3.rs  mod.rs  project.rs  publication.rs  settings.rs  system.rs  visualization.rs
src-tauri/src/core/: cancellable_operation.rs  data.rs  data_tests.rs  imputation.rs  imputation_result.rs  memory_management.rs  mod.rs  progress_tracker.rs  project.rs
src-tauri/src/db/: mod.rs  models.rs  repository.rs
src-tauri/src/error/: academic_error.rs  mod.rs  simple_error.rs
src-tauri/src/python/: arrow_bridge.rs  arrow_bridge_stub.rs  bridge.rs  bridge_api.rs  bridge_stub.rs  embedded_runtime.rs  gi_version_fix.py  mod.rs  runtime_init.rs  safe_bridge.rs  safe_bridge_v2.rs  safe_bridge_v2_stub.rs  stub.rs  test_bridge.rs  version_config.rs
src-tauri/src/security/: dll_security.rs  mod.rs
src-tauri/src/services/: auto_save.rs  cache.rs  local_computation_cache.rs  local_file_manager.rs  local_profiler.rs  memory_monitor.rs  mod.rs  offline_resources.rs  progress_service.rs  recovery_service.rs  update_checker.rs
src-tauri/src/utils/: fs.rs  mod.rs
src-tauri/src/validation/: data_validator.rs  mod.rs
src-tauri/test_data/python_scripts/airimpute/: __init__.py
src-tauri/test_data/python_scripts/airimpute/test/: __init__.py  failing_operation.py  malformed_output.py  valid_operation.py
src-tauri/tests/: integration_tests.rs.disabled  test_python_bridge_security.sh
src-tauri/tests/common.disabled/: mod.rs
src-tauri/tests/python_bridge/: integration_tests.rs  mod.rs  security_tests.rs
src-tauri/webkit-fix/: .linux-build
(+174 files in other folders)
