[package]
name = "airimpute-pro"
version = "1.0.0"
description = "Professional Air Quality Data Imputation - Desktop Edition"
authors = ["AirImpute Research Team"]
license = "MIT"
repository = "https://github.com/airimpute/airimpute-pro-desktop"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
pyo3-build-config = { version = "0.20", optional = true }

[dependencies]
# Core Tauri framework
tauri = { version = "1.5", features = [ "dialog-save", "process-relaunch", "fs-read-dir", "dialog-message", "clipboard-write-text", "dialog-ask", "fs-rename-file", "fs-exists", "clipboard-read-text", "process-exit", "fs-write-file", "notification-all", "fs-read-file", "dialog-open", "fs-create-dir", "dialog-confirm", "protocol-asset",
    "system-tray"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.21"

# Cryptography
sha2 = "0.10"

# Text Processing
regex = "1.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "json", "chrono", "uuid", "migrate"] }
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
rusqlite = { version = "0.30", features = ["bundled"] }

# Scientific Computing Bridge
pyo3 = { version = "0.20", features = ["auto-initialize"], optional = true }
numpy = { version = "0.20", optional = true }
ndarray = { version = "0.15", features = ["serde"] }
nalgebra = "0.32"

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Performance and Caching
dashmap = "5.5"
moka = { version = "0.12", features = ["future"] }
parking_lot = "0.12"
lru = "0.12"
lazy_static = "1.4"
once_cell = "1.19"

# Cryptography and Security
ring = "0.17"
rustls = "0.23"
argon2 = "0.5"

# Compression and Archives
flate2 = "1.0"
zstd = "0.13"
tar = "0.4"
zip = "0.6"

# File Operations
csv = "1.3"
calamine = "0.22"     # Excel files (reading)
xlsxwriter = "0.6"    # Excel files (writing)
hdf5 = { version = "0.8", optional = true }          # HDF5 scientific format
netcdf = { version = "0.8", optional = true }        # NetCDF scientific format
walkdir = "2.4"       # Directory walking
# parquet = "47.0"      # Apache Parquet (commented out due to chrono conflict)
arrow = { version = "52.0", features = ["prettyprint", "ipc"] }  # Apache Arrow

# Date and Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# UUID Generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Text Encoding
encoding_rs = "0.8"

# System Information
sysinfo = "0.30"
num_cpus = "1.16"
dirs = "5.0"

# Parallel Processing
rayon = "1.8"
crossbeam = "0.8"

# Math and Statistics
statrs = "0.16"
approx = "0.5"
num-traits = "0.2"

# Memory Management
mimalloc = { version = "0.1", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[features]
default = ["custom-protocol", "python-support"]
custom-protocol = ["tauri/custom-protocol"]
python-support = ["pyo3", "numpy", "pyo3-build-config"]
hdf5-support = ["hdf5"]
netcdf-support = ["netcdf"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 2

[dev-dependencies]
tempfile = "3"
mockito = "1"
